--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,85 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
+
 .App {
+  width: 80%;
+  margin: 0 auto;
+  font-family: "Montserrat", sans-serif;
+}
+
+body {
+  background-color: aliceblue;
+}
+
+.title {
+  padding-top: 1rem;
   text-align: center;
+  color: #333;
+  font-weight: 600;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2rem 0;
+}
+
+span {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+label {
+  display: block;
+}
+
+input {
+  padding: 5px;
+  margin-left: 0.5rem;
+}
+
+input[type="number"] {
+  width: 100px;
+}
+
+input[type="text"] {
+  width: 200px;
+}
+
+button {
+  padding: 10px 20px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  opacity: 70%;
+}
+
+.add {
+  background-color: #007bff;
+}
+
+.delete {
+  background-color: #e90000;
+}
+
+.expense {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 0 0.5rem;
+  margin: 1rem 0;
+  background-color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.expense-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 1rem 0;
 }
